Add requirejs and requirejs/text; Inject stats into app

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@ void main() {
   </script>
 		<canvas id="glcanvas" style="display: block; width: 100vw; height: 100vh;"></canvas>
         <script src="node_modules/twgl.js/dist/4.x/twgl.js"></script>
+        <script src="node_modules/stats.js/build/stats.min.js"></script>
+        <script src="node_modules/requirejs/require.js"></script>
         <script src="app/main.js"></script>
     </body>
 </html>
