Add cat input - fix up 3D textures

--- a/im2colvsgpu.html
+++ b/im2colvsgpu.html
@@ -4,7 +4,8 @@
         <title>WebGL GPGPU</title>
     </head>
     <body style="padding: 0; margin: 0;">
-		<canvas id="glcanvas" style="display: block; width: 100vw; height: 100vh;"></canvas>
+		<canvas id="glcanvas" style="display: block; width: 1280px; height: 849px;"></canvas>
+        <img id="input" src="res/balloon_cat.jpg" style="visibility: hidden; display: none;" alt="balloon cat">
         <script src="node_modules/twgl.js/dist/4.x/twgl.js"></script>
         <script src="node_modules/stats.js/build/stats.min.js"></script>
         <script src="node_modules/requirejs/require.js"></script>
