--- a/cnn.html
+++ b/cnn.html
@@ -9,6 +9,7 @@
         <script src="node_modules/twgl.js/dist/4.x/twgl.js"></script>
         <script src="node_modules/stats.js/build/stats.min.js"></script>
         <script src="node_modules/requirejs/require.js"></script>
+        <script src="app/testlabels.js"></script>
         <script src="app/cnn.js"></script>
     </body>
 </html>
