--- a/cnn.html
+++ b/cnn.html
@@ -6,9 +6,9 @@
     <body style="padding: 0; margin: 0;">
 		<canvas id="glcanvas" style="display: block; width: 1280px; height: 849px;"></canvas>
         <img id="input" src="res/balloon_cat.jpg" style="visibility: hidden; display: none;" alt="balloon cat">
-        <script src="node_modules/twgl.js/dist/4.x/twgl.js"></script>
-        <script src="node_modules/stats.js/build/stats.min.js"></script>
-        <script src="node_modules/requirejs/require.js"></script>
+        <script src="bower_components/twgl.js/dist/4.x/twgl.js"></script>
+        <script src="bower_components/stats.js/build/stats.min.js"></script>
+        <script src="bower_components/requirejs/require.js"></script>
         <script src="app/testlabels.js"></script>
         <script src="app/cnn.js"></script>
     </body>
